feat(exam): test button added

--- a/exercise/index.html
+++ b/exercise/index.html
@@ -7,7 +7,7 @@
     <title>Licence plate searcher</title>
 </head>
 <body>
-
+    <button>cool stuff</button>
 
     <script src="server.js"></script>
 </body>
