--- a/exercise/index.html
+++ b/exercise/index.html
@@ -9,6 +9,8 @@
 <body>
     <button>cool stuff</button>
 
-    <script src="server.js"></script>
+    <script src="ajax.js"></script>
+    <script src="frontend.js"></script>
+    
 </body>
 </html>
