--- a/exercise/index.html
+++ b/exercise/index.html
@@ -7,7 +7,8 @@
     <title>Licence plate searcher</title>
 </head>
 <body>
-    <button>cool stuff</button>
+    <input type="text" placeholder="licence plate">
+    <button>Query database</button>
 
     <script src="ajax.js"></script>
     <script src="frontend.js"></script>
